Modfi final, manque les commentaires

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6) # compatibilités de CMake
-project(main_exe) # nom du projet 
+project(create_raster) # nom du projet 
 
 set(CMAKE_BUILD_TYPE debug) # compilation en mode debug
 set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11") # options
@@ -11,12 +11,12 @@ file( # liste des fichiers à compiler
 )
 
 add_executable( # création de l’exécutable binaire du projet
-  main_exe # nom du binaire
+  create_raster # nom du binaire
   main.cpp # liste des fichiers compilés pour le linking
   point.cpp
-  pixel.cpp
+  tool.cpp
 ) 
 
 
 
-target_link_libraries(main_exe proj)
+target_link_libraries(create_raster proj)
